--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
@@ -6,14 +10,40 @@
 header{
     display: flex;
     align-items: center;
+    justify-content: space-around;
     width: 100%;
     height: 80px;
+    background-color: antiquewhite;
 }
 .conjuntoLogoNome{
     display: flex;
     align-items: center;
     margin-left: 35px;
 }
+.logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+    background: url('imagens/Logo.png') center center;
+
+}
+
 .nome{
     margin-left:40px;
+}
+
+.nome h3{
+    font-family: 'lato', sans-serif;
+}
+.outrasPaginas{
+    display: flex;
+
+}
+.outrasPaginas li{
+    margin: 40px;
+    justify-content: flex-end;
+
 }
