--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-align: center;
 }
+
 header{
+    
+    border-bottom: 3px solid black;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -15,11 +19,13 @@ header{
     height: 80px;
     background-color: antiquewhite;
 }
+
 .conjuntoLogoNome{
     display: flex;
     align-items: center;
     margin-left: 35px;
 }
+
 .logo{
     display: flex;
     justify-content: center;
@@ -38,12 +44,59 @@ header{
 .nome h3{
     font-family: 'lato', sans-serif;
 }
+
 .outrasPaginas{
     display: flex;
 
 }
+
 .outrasPaginas li{
     margin: 40px;
     justify-content: flex-end;
 
+}
+
+body{
+    background-color: bisque;
+}
+
+h1{
+    margin-top: 100px;
+}
+
+.calculadora{
+    height: 343;
+    width: 281px;
+    border-radius: 10px;
+    border:2px solid black;
+    margin: auto;
+}
+
+#corpoCalculadora{
+    background: url('imagens/fundoCalculadora.png') center center;
+    margin-top: 10px;
+}
+
+.calculadoraBotoes{
+    margin: auto;
+    position: relative;
+    z-index: 10;
+    margin-top: -100px;
+}
+
+button{
+    margin-top: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+    width: 50px;
+    height:50px;
+    background-color: rgb(115, 123, 161);
+}
+
+input{
+    width: 250px;
+    height: 70px;
+    border-radius: 20px;
+    border-color: black;
+    background-color: white;
 }
