--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ header{
     justify-content: space-around;
     width: 100%;
     height: 80px;
-    background-color: antiquewhite;
+    background-color: rgb(20, 41, 61);
+    color: white;
 }
 
 .conjuntoLogoNome{
@@ -99,4 +100,9 @@ input{
     border-radius: 20px;
     border-color: black;
     background-color: white;
+}
+
+a{
+    text-decoration: none;
+    color: white;
 }
