--- a/style.css
+++ b/style.css
@@ -58,11 +58,13 @@ header{
 }
 
 body{
-    background-color: bisque;
+    background-color: rgb(1 100 148);
 }
 
 h1{
     margin-top: 100px;
+    color: white;
+    font-family: 'lato', sans-serif;
 }
 
 .calculadora{
