--- a/style.css
+++ b/style.css
@@ -76,14 +76,17 @@ h1{
 }
 
 .monitorPomodoro{
-    height: 300px;
+    display: flex;
+    align-items: center;
+    height: 280px;
     width: 700px;
-    border-radius: 5px;
-    border: solid black;
+    border-radius: 10px;
+    border: 5px solid rgb(64, 41, 100);
     margin: auto;
     color: #4c67e2;
     font-size: 300px;
     font-family: 'Digital Numbers Regular';
+   
 }
 
 .textoPomodoro{
@@ -139,3 +142,7 @@ a{
     font-weight: normal;
     src: local('Digital Numbers Regular'), url('DigitalNumbers-Regular.woff') format('woff');
     }
+
+telaPomodoro{
+    display: flex;
+}
